# ponyTUI

./: .gitignore  MANIFEST.in  README.md  booru_api.py  display.py  install.sh  main.py  pyproject.toml  setup.py  tui.py
src/: display.py  setup.py  tui.py
src/booru_api/: __init__.py
src/display/: display.py
src/main/: main.py
src/params/: params.py
src/tui/: tui.tcss
